fix ui-append icon spacing issues

--- a/assets/css/events/map.less
+++ b/assets/css/events/map.less
@@ -17,6 +17,10 @@
 body#events.map {
     .ui-append {
         display: inline-block;
+
+        &>.icon {
+            right: -1px;
+        }
     }
 
     #map-canvas {
